# app-lemonator

./: !logging_config.yaml  .gitignore  Cargo.toml  logging_config.yaml  readme.md  todo.md
migrations/: 20230719074959_apps.sql
scripts/: local_build.ps1  prod_build.ps1  test_macos.sh  test_windows.ps1
src/: actions.rs  cli.rs  constants.rs  data.rs  db.rs  finder.rs  log_config.rs  main.rs  paths.rs  runner.rs
