[package]
name = "app-lemonator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powershell_script = "1.1"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
colored = "2"
strum = "0.25"
strum_macros = "0.25"
regex = "1.9"
eyre = "0.6"
color-eyre = "0.6"
chrono = "0.4"
tabled = "0.13.0"
log = "0.4"
log4rs = "1"
dialoguer = "0.10"
indicatif = "0.17"
walkdir = "2.3"
serde = "1.0"
serde_json = "1.0"