[package]
name = "app-lemonator"
version = "0.3.0"
edition = "2021"
description = "Keeps the running of your apps lemony fresh!"
authors = ["Paul"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powershell_script = "1.1"
clap = { version = "4", features = ["derive", "cargo"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
colored = "2"
strum = "0.25"
strum_macros = "0.25"
regex = "1.9"
eyre = "0.6"
color-eyre  = { version = "0.6", default-features = false }
chrono = "0.4"
tabled = "0.14"
log = "0.4"
log4rs = "1"
dialoguer = "0.10"
indicatif = "0.17"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"

[dependencies.uuid]
version = "1.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
